# health-tracker

./: Makefile  README.md  asset-manifest.json  consolidate_old_records.py  docker-compose.yml  index.html  manifest.json  manifest.webmanifest  merge_similar_symptoms.py  service-worker.js  service-worker.js.map  sw.js
api/: Cargo.toml  Dockerfile  README.md
api/.sqlx/: query-09f3952a8df3a50608be862923f73114fe146b7963fcdb2a0b041c2ee74e9a96.json  query-0a5217936279c8e3b17b90243a318352962d53aa63ce574983a390c9b0f5a8ad.json  query-15d36d0a6e08c13d80fdefc786baa2d2f2b7f5f67584afe9c73c9316e6e6d622.json  query-65c4972a1e7c1d09d9c449244f41f513e305919748301bebf0faac2fc055f0d8.json  query-67f6e576dd5e4c3b17ad0b25f85bb2a7afcb82ec084d23fca62bd743bd2ed9bb.json  query-78b0e47a8ca141b69cde486eeea0a9a55065d3cfe9e2052f9a76e78f896ffb50.json  query-927268e3a7cba580750e7557f6d18df19cf3209d3e63c54c0268a6250214f6cf.json  query-ad752d2e86acb1b28e5271a9977bfc62391cd21015a0268ed8ff31ff7d82d852.json  query-f25e04ecbcdbdd1aec6346ab2a0068afc51e36d9c9b5ae5e3d787ab548cd94a7.json  query-fba2bb77b05bac88a2ba86733e36c773595603de30671a7871cf2c6e37079418.json
api/migrations/: 20230729073915_init.sql
api/src/: config.rs  db.rs  domain.rs  ids.rs  integration_tests.rs  main.rs
api/src/api/: all.rs  common.rs  error.rs  metrics.rs  mod.rs  security.rs  start.rs  symptoms.rs
assets/: index-182a88e9.js  index-2018886c.js  index-364bf725.js  index-3ed00555.js  index-5251b8b1.js  index-6c33908f.css  index-6d448614.js  index-891688aa.js  index-96a7bd74.js  index-9fb799bb.js  index-b795ab33.js
(+120 files in other folders)
