[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
nanoid = "0.4.0"
poem = { version = "1.3.57", features = ["test"] }
poem-openapi = { version = "3.0.0", features = ["swagger-ui"] }
serde = "1.0.178"
serde_jsonrc = "0.1.0"
serde_yaml = "0.9.25"
sqlx = { version = "0.7.1", features = [ "sqlite", "runtime-tokio" ] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[profile.release]
strip = true
